# poverty-nyc

./: .env.example  README.md  pyproject.toml  render.yaml  requirements.txt
datasets/: registry.yaml
datasets/census_acs/: config.yaml  transformer.py
datasets/census_zctas_2020/: config.yaml  transformer.py
datasets/food_supply_gap/: config.yaml  transformer.py
datasets/zillow_zori/: config.yaml  transformer.py
scripts/: export_static_data.py  ingest_data.py
src/: constants.py
src/api/: main.py  routes.py
src/config/: models.py  settings.py
src/ingestion/: census_fetcher.py  nyc_open_data_fetcher.py  parser.py  shapefile_fetcher.py  storage.py  url_fetcher.py
viz/: package-lock.json  package.json  response.json  vite.config.js
viz/public/data/: food-gaps.json  poverty-by-zip.json  rent-by-zip.json
viz/src/: App.jsx  index.css
viz/src/components/: ComparisonTool.jsx  Dashboard.jsx  ScrollyTelling.jsx
