[project]
name = "nyc-open-data-pipeline"
version = "0.1.0"
description = "Extensible data ingestion pipeline for NYC Open Data datasets"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=12.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "geoalchemy2>=0.14.0",
    "shapely>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "geopandas>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "datasets"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
